# llm-evaluation-labs

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  database.py  requirements.txt  supervisor.conf
backend/alembic/: env.py
backend/alembic/versions/: 20240322_initial.py
backend/api/: __init__.py  llm.py
backend/api/v1/: api.py
backend/app/: main.py
backend/app/core/: celery_app.py  config.py  exceptions.py
backend/app/evaluators/: base.py  factual_qa.py  tasks.py
backend/app/models/: models.py
backend/app/schemas/: evaluation.py
backend/app/services/: openai.py
backend/auth/: deps.py  utils.py
backend/core/: __init__.py  logging.py  production.py
backend/middleware/: __init__.py  error_handler.py  rate_limit.py
backend/models/: __init__.py  llm_client.py  local_models.py  user.py
backend/schemas/: auth.py
backend/scripts/: backup.py  create_admin.py  schedule_backup.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  EvaluationsList.tsx  FailuresList.tsx  Layout.tsx  ModelsList.tsx  PromptsList.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: api.ts
frontend/src/providers/: QueryProvider.tsx
(+10 files in other folders)
